Extend find command to find all fields